--- a/apps/spec-validator/Cargo.toml
+++ b/apps/spec-validator/Cargo.toml
@@ -6,3 +6,7 @@ edition.workspace = true
 [dependencies]
 sapling-data-model.workspace = true
 sapling-query-engine.workspace = true
+pest = "2.7"
+pest_derive = "2.7"
+anyhow = "1.0"
+colored = "2.1"
