--- a/apps/spec-validator/Cargo.toml
+++ b/apps/spec-validator/Cargo.toml
@@ -6,8 +6,9 @@ edition.workspace = true
 [dependencies]
 sapling-data-model.workspace = true
 sapling-query-engine.workspace = true
-pest = "2.7"
-pest_derive = "2.7"
+pest = { version = "2.7" }
+pest_derive = { version = "2.7", features = ["grammar-extras"] }
 anyhow = "1.0"
 colored = "2.1"
 similar = "2.6"
+clap = { version = "4.5", features = ["derive"] }
