--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,9 @@ members = [
     "apps/spec-validator",
     "crates/sapling-data-model",
     "crates/sapling-query-engine",
-    "crates/sapling-func-macro",
-    "crates/sapling-func",
-    "crates/sapling-std"
+    "crates/sapling-serialization-macro",
+    "crates/sapling-serialization",
+    "crates/sapling-std",
 ]
 
 [workspace.package]
@@ -17,8 +17,14 @@ edition = "2024"
 
 [workspace.dependencies]
 sapling-data-model = { path = "crates/sapling-data-model" }
-sapling-func-macro = { path = "crates/sapling-func-macro" }
-sapling-func = { path = "crates/sapling-func" }
+sapling-serialization-macro = { path = "crates/sapling-serialization-macro" }
+sapling-serialization = { path = "crates/sapling-serialization" }
 sapling-std = { path = "crates/sapling-std" }
 sapling-query-engine = { path = "crates/sapling-query-engine" }
 itertools = "0.14.0"
+syn = "2.0.111"
+quote = "1.0.42"
+proc-macro-error = "1.0.4"
+proc-macro2 = "1.0.104"
+darling = "0.23.0"
+thiserror = "2.0.17"
