--- a/apps/spec-validator/Cargo.toml
+++ b/apps/spec-validator/Cargo.toml
@@ -4,6 +4,7 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+sapling-app.workspace = true
 sapling-data-model.workspace = true
 sapling-query-engine.workspace = true
 pest = { version = "2.7" }
