--- a/apps/spec-validator/Cargo.toml
+++ b/apps/spec-validator/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 sapling-app.workspace = true
 sapling-data-model.workspace = true
 sapling-query-engine.workspace = true
+sapling-std.workspace = true
 pest = { version = "2.7" }
 pest_derive = { version = "2.7", features = ["grammar-extras"] }
 anyhow = "1.0"
