Added first core ui components

--- a/apps/ide/Cargo.toml
+++ b/apps/ide/Cargo.toml
@@ -7,3 +7,4 @@ edition.workspace = true
 raylib.workspace = true
 anyhow.workspace = true
 sapling-app.workspace = true
+sapling-gui.workspace = true
