--- a/crates/sapling-gui/Cargo.toml
+++ b/crates/sapling-gui/Cargo.toml
@@ -5,4 +5,6 @@ edition.workspace = true
 
 [dependencies]
 kasuari.workspace = true
+raylib.workspace = true
 sapling-gui-macro.workspace = true
+anyhow.workspace = true
