--- a/crates/sapling-gui/Cargo.toml
+++ b/crates/sapling-gui/Cargo.toml
@@ -6,5 +6,6 @@ edition.workspace = true
 [dependencies]
 kasuari.workspace = true
 raylib.workspace = true
+sapling-app.workspace = true
 sapling-gui-macro.workspace = true
 anyhow.workspace = true
